--- a/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
@@ -406,7 +406,7 @@
   
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
               
-                <form method='POST' action='{% url "website:contact-form" %}' role="form" class="html-contact-form" >{% csrf_token %}
+                <form method='POST' action='' role="form" class="html-contact-form" >{% csrf_token %}
                 <div class="row">
                   <div class="form-group col-md-6">
                     <label for="name">Your Name</label>
