--- a/allifmaalsalesapp/templates/allifmaalsalesapp/base/sidetopnavbar/salessidetopnavbar.html
+++ b/allifmaalsalesapp/templates/allifmaalsalesapp/base/sidetopnavbar/salessidetopnavbar.html
@@ -162,7 +162,7 @@
         </li>
             
         <li>
-          <a class="nav-link" href="{% url 'allifmaaluiapp:allifmaalUIMainUIHome' %}">Common</a>
+          <a class="nav-link" href="">Common</a>
         </li>
         <li>
           <a class="nav-link" href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}">Expenses</a>
