--- a/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
@@ -45,7 +45,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
-            <h1>Work smarterrrr with AllifApp, the best ERP solution to manage your business.</h1>
+            <h1>Work smarter with AllifApp, the best ERP solution to manage your business.</h1>
             <h2>Welcome to a new and affordable world-class ERP Suite.</h2>
             <div class="d-flex justify-content-center justify-content-lg-start">
               <a href="#about" class="btn-get-started scrollto">info@allifmaal.com/+254723973992</a>
