added some testing

--- a/allifmaaladminapp/templates/allifmaaladminapp/base/sidetopnavbars/sidetopnavbars.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/base/sidetopnavbars/sidetopnavbars.html
@@ -19,7 +19,7 @@
       <div class="amrullah-side-navbar">
         
         <li><a class="dropdown-item" href="{% url 'allifmaaladminapp:adminappHome' user_var glblslug %}">Allifmaal</a></li>
-        <li><a class="dropdown-item" href="{% url 'allifmaalapp:allifmaalmaindashboard' %}">Dashboard</a></li>
+
         
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSectors' user_var glblslug %}">Sectors</a></li>
         
@@ -172,7 +172,7 @@
         </li>
             
         <li>
-          <a class="nav-link" href="{% url 'allifmaaluiapp:allifmaalUIMainUIHome' %}">Common</a>
+          <a class="nav-link" href="">Common</a>
         </li>
         <li>
           <a class="nav-link" href="{% url 'allifmaaladminapp:adminappUsers' user_var glblslug %}">Users</a>
