--- a/allifmaaladminapp/templates/allifmaaladminapp/error/error.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/error/error.html
@@ -220,7 +220,7 @@
                        <p>Please correct the error and login again.</p>
                       
                            
-                            <a href="{% url 'login:logout' %}" style="text-decoration: none; text-align: center;">Login</a>
+                            <a href="" style="text-decoration: none; text-align: center;">Login</a>
                            
                             
                         
