--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/add-division.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/add-division.html
@@ -80,6 +80,7 @@
             <div class="card shadow text-left p-3 allif-form-card">
               <label>City</label> {{form.city}}
               <label>P.O. BOX</label> {{form.pobox}}
+              <label>Comments</label> {{form.comments}}
                
                 <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
         
