testing storing links

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
@@ -33,6 +33,11 @@
             <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
             <li><a class="getstarted scrollto" href="{% url 'allifmaalusersapp:userLoginPage' %}">Login</a></li>
+
+            <li><a class="getstarted scrollto" href="{% url 'allifmaalcommonapp:link_list' %}">list</a></li>
+            <li><a class="getstarted scrollto" href="{% url 'allifmaalcommonapp:add_link' %}">+link</a></li>
+
+            
           </ul>
           <i class="bi bi-list mobile-nav-toggle">Menu</i>
         </nav><!-- .navbar -->
