--- a/allifmaaladminapp/templates/allifmaaladminapp/base/sidetopnavbars/sidetopnavbars.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/base/sidetopnavbars/sidetopnavbars.html
@@ -50,11 +50,11 @@
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a></li>
         
         <li><a class="dropdown-item" href="{% url 'allifmaalusersapp:userLogoutPage' %}">Logout</a></li>
+
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a></li>
 
+        <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:link_list' %}">Links</a></li>
         
-        
-       
         <li><a class="dropdown-item"href="{% url 'allifmaalcommonapp:ui1' user_var glblslug %}">UIs</a></li>
         <div class="btn-group">
           <button class="side-nav-dropdown-btn dropdown-toggle " type="button" data-bs-toggle="dropdown" data-bs-auto-close="true" aria-expanded="false">
