--- a/allifmaalcommonapp/static/allifmaalcommonapp/css/allifwebstyle.css
+++ b/allifmaalcommonapp/static/allifmaalcommonapp/css/allifwebstyle.css
@@ -312,9 +312,9 @@ body {
     padding-top: 72px;
   }
   #hero h1 {
-    margin: 0 0 10px 0;
-    font-size: 2.5em;
-    font-weight: 700;
+    margin: 0 0 7px 0;
+    font-size: 2.0em;
+    font-weight: 600;
     line-height: 50px;
     color: var(--main-black-color);
   }
@@ -1550,3 +1550,23 @@ body {
     font-size: var(--main-text-font-size);
     color: var(--main-blue-color);
   }
+
+  /*########################custom styling ##########################################*/
+
+  .content-why-allifmaal-erp{
+    text-align: center;
+    font-size: 4em;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    margin-top: 0em;
+    margin-bottom: 0.5em;
+    
+    animation: allif_glow 1.5s infinite alternate;
+  }
+  @keyframes allif_glow {
+    from {
+        text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2), 0 0 0px #ff6b6b, 0 0 0px #ff6b6b, 0 0 0px #ff6b6b;
+    }
+    to {
+        text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2), 0 0 0px #f0e130, 0 0 0px #f0e130, 0 0 0px #f0e130;
+    }
+}
