--- a/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
@@ -11,6 +11,7 @@
     
   <!-- Template Main CSS File -->
     <link href="{% static 'allifmaalcommonapp/css/allifwebstyle.css' %}" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
   </head>
   
   <body>
@@ -47,7 +48,7 @@
         <div class="row">
           <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
             <h1>Work smarter with Allifmaal, the best ERP, yet the most affordable solution to manage all aspects your business.</h1>
-            <h2>Unlock your business potential with Allifmaal.</h2>
+            <h2>Unlock your business potential with Allifmaal ERP.</h2>
             <div class="d-flex justify-content-center justify-content-lg-start">
               <a href="#about" class="btn-get-started scrollto">WhatsApp:254722314212</a>
               <a href="" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Contact Us</span></a>
@@ -76,19 +77,9 @@
               <p>
                 Allifmaal ERP is a leading world-class user friendly suite of business management applications for all types of companies and organizations.
                 Being a cutting-edge ERP system, it was designed to streamline operations, enhance productivity, and drive growth.
-                Further, our Allifmaal ERP solution offers:
               </p>
 
-                      
-
-          <ul>
-            <li><i class="ri-check-double-line"></i><strong>Seamless Integration</strong>: Connect all your business processes in one unified platform.</li>
-            <li><i class="ri-check-double-line"></i><strong>Real-Time Insights</strong>: Make informed decisions with instant access to critical data.</li>
-            <li><i class="ri-check-double-line"></i><strong>Scalability</strong>: Grow your business with a system that evolves with you.</li>
-            <li><i class="ri-check-double-line"></i><strong>User-Friendly Interface</strong>: Enjoy an intuitive and easy-to-navigate experience.</li>
-            <li><i class="ri-check-double-line"></i><strong>Enhanced Security</strong>: Protect your data with top-tier security features.</li>
-            
-          </ul>
+           
          
             <img src="{% static 'allifmaalcommonapp/css/images/saas.webp' %}" class="img-fluid animated" alt="Allifmaal">
           
@@ -96,22 +87,58 @@
             <div class="col-lg-6 pt-4 pt-lg-0">
 
               <p>
-               Allifmaal ERP was developed to serve many industries including but not limited to the following:
+                Allifmaal ERP is meticulously developed by a team of experienced developers. Our developers bring years of expertise in software engineering, business processes, and industry best practices to create a robust and reliable ERP solution tailored to meet the diverse needs of modern businesses.
               </p>
-              <ul>
-                <li><i class="ri-check-double-line"></i>Distribution and Sales </li>
-                <li><i class="ri-check-double-line"></i>Healthcare</li>
-                <li><i class="ri-check-double-line"></i>Education</li>
-                <li><i class="ri-check-double-line"></i>Real Estate</li>
-                <li><i class="ri-check-double-line"></i>Hospitality</li>
-                <li><i class="ri-check-double-line"></i>Transport and Logistics</li>
-                <li><i class="ri-check-double-line"></i>Service</li>
-              </ul>
-              
+             
               <a href="#" class="btn-learn-more">Learn More</a>
               <div>
                 <img src="{% static 'allifmaalcommonapp/css/images/whyallifmaal.png' %}" class="img-fluid animated" alt="Allifmaal">
               </div>
+            </div>
+            
+          </div>
+  
+        </div>
+      </section><!-- End About Us Section -->
+
+      
+    
+      <!-- ======= About Us Section ======= -->
+      <section id="about" class="about">
+        <div class="container" data-aos="fade-up">
+  
+          <div class="section-title">
+            <h2>Allifmaal ERP Serves The Following Industries</h2>
+          </div>
+  
+          <div class="row content">
+            <div class="col-lg-6">
+             
+                      
+
+          <ul>
+            <li><i class="ri-check-double-line"></i><strong>Sales</strong> - Wholesale, Retail, Distribution, Direct Sales.</li>
+            <li><i class="ri-check-double-line"></i><strong>Healthcare</strong> - Hospitals, Clinics, Pharmaceuticals, Insurances.</li>
+            <li><i class="ri-check-double-line"></i><strong>Education</strong>- Schools, Colleges, Universities.</li>
+            <li><i class="ri-check-double-line"></i><strong>Hospitality</strong> - Hotels, Restaurents, Events.</li>
+            
+          </ul>
+         
+           
+            </div>
+            <div class="col-lg-6 pt-4 pt-lg-0">
+
+             
+              <ul>
+                <li><i class="ri-check-double-line"></i><strong>Finance</strong> - FinTech, Banking, Investments, Societies.</li>
+                <li><i class="ri-check-double-line"></i><strong>Real Estate</strong> - Residential, Commercial, Industrial.</li>
+                <li><i class="ri-check-double-line"></i><strong>Logistics</strong> - Transport, Travel Agencies, Courier, Freighters.</li>
+                <li><i class="ri-check-double-line"></i><strong>Service</strong>- Consulting, Legal, Accounting, ICT.</li>
+                
+              </ul>
+              
+              <a href="#" class="btn-learn-more">Learn More</a>
+              
             </div>
             
           </div>
@@ -545,11 +572,11 @@
               <h4>Our Social Networks</h4>
               <p>Follow us on</p>
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter">X</i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook">FB</i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram">IG</i></a>
+                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
                 
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin">LI</i></a>
+                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
   
