--- a/allifmaalcommonapp/static/allifmaalcommonapp/css/allifwebstyle.css
+++ b/allifmaalcommonapp/static/allifmaalcommonapp/css/allifwebstyle.css
@@ -21,6 +21,7 @@
   --table-list-identifier:#0314f8;
   --main-border-line:1px solid #18b703;
   --main-delete-color-background:#e17639;
+  --main-allifmaal-erp-font-color:#281df5;
       }
 /*--------------------------------------------------------------
 # Allifmain
@@ -1569,4 +1570,8 @@ body {
     to {
         text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2), 0 0 0px #f0e130, 0 0 0px #f0e130, 0 0 0px #f0e130;
     }
+}
+
+.allifmaal-erp-styling{
+  color: var(--main-allifmaal-erp-font-color);
 }
