--- a/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
@@ -12,6 +12,7 @@
   <!-- Template Main CSS File -->
     <link href="{% static 'allifmaalcommonapp/css/allifwebstyle.css' %}" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   </head>
   
   <body>
@@ -30,8 +31,8 @@
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#about">About</a></li>
-            <li><a class="nav-link scrollto" href="#services">Services</a></li>
-            <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+            <li><a class="nav-link scrollto" href="#modules">Modules</a></li>
+            <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
             <li><a class="getstarted scrollto" href="{% url 'allifmaalusersapp:userLoginPage' %}">Login</a></li>
 
@@ -47,11 +48,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
-            <h1>Work smarter with Allifmaal, the best ERP, yet the most affordable solution to manage all aspects your business.</h1>
-            <h2>Unlock your business potential with Allifmaal ERP.</h2>
+            <h1>Achieve your business goals effortlessly with <span class="allifmaal-erp-styling">Allifmaal ERP</span>,
+             
+                the smarter way to manage your organization seamlessly.</h1>
+            <h6>Unlock your full potential with the best ERP system designed to streamline your operations and drive growth.</h6>
             <div class="d-flex justify-content-center justify-content-lg-start">
-              <a href="#about" class="btn-get-started scrollto">WhatsApp:254722314212</a>
-              <a href="" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Contact Us</span></a>
+              <a href="#about" class="btn-get-started scrollto">About Allifmaal ERP</a>
+             
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img">
@@ -87,7 +90,7 @@
             <div class="col-lg-6 pt-4 pt-lg-0">
 
               <p>
-                Allifmaal ERP is meticulously developed by a team of experienced developers. Our developers bring years of expertise in software engineering, business processes, and industry best practices to create a robust and reliable ERP solution tailored to meet the diverse needs of modern businesses.
+                Allifmaal ERP is meticulously developed by a team of experienced developers. Our developers bring years of expertise in software engineering, business processes, and industry best practices to create a robust and reliable ERP solution tailored to meet the diverse needs of modern businesses world.
               </p>
              
               <a href="#" class="btn-learn-more">Learn More</a>
@@ -295,7 +298,7 @@
       </section><!-- End Skills Section -->
   
       <!-- ======= Services Section ======= -->
-      <section id="services" class="services section-bg">
+      <section id="modules" class="services section-bg">
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
@@ -474,6 +477,7 @@
                 </div>
   
                 <div class="email">
+                  
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
                   <p>info@allifmaal.com</p>
@@ -542,9 +546,6 @@
                 <li><i class="bx bx-chevron-right"></i> <a href="#"><strong>Website:</strong> <a href="https://allifmaal.com/"> Allifmaal</a></li>
               </ul>
             </div>
-  
-  
-            
   
             <div class="col-lg-3 col-md-6 footer-links">
               <h4>Useful Links</h4>
