--- a/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/website/website.html
@@ -6,11 +6,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Alifmaal ERP</title>
     <!-- Favicons back-to-top -->
-    <link rel="shortcut icon" href='{% static "allifmaalcommonapp/css/images/allifmaal-icon.png" %}' type="png/ico">
-    <link href="{% static 'allifmaalcommonapp/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link rel="shortcut icon" href='{% static "allifapperp/css/images/allifmaal-icon.png" %}' type="png/ico">
+    <link href="{% static 'allifapperp/css/common/bootstrap.min.css' %}" rel="stylesheet">
     
   <!-- Template Main CSS File -->
-    <link href="{% static 'allifmaalcommonapp/css/allifwebstyle.css' %}" rel="stylesheet">
+    <link href="{% static 'allifapperp/css/website/website.css' %}" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   </head>
@@ -22,7 +22,7 @@
       <div class="container d-flex align-items-center">
   
         <!-- image logo  -->
-        <a href="" class="logo me-auto"><img src='{% static "allifmaalcommonapp/css/images/allifmaal_logo.png" %}' alt="Allifmaal" class="img-fluid"></a>
+        <a href="" class="logo me-auto"><img src='{% static "allifapperp/css/images/allifmaal_logo.png" %}' alt="Allifmaal" class="img-fluid"></a>
     
         <!--uncomment below if you want to use word logo-->
         <!-- <h1 class="logo me-auto"><a href="">Allifmaal</a></h1> -->
@@ -48,17 +48,17 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
-            <h1>Achieve your business goals effortlessly with <span class="allifmaal-erp-styling">Allifmaal ERP</span>,
+            <h1>Achieve your business goals with AI driven <span class="allifmaal-erp-styling">Allifmaal ERP</span>,
              
                 the smarter way to manage your organization seamlessly.</h1>
-            <h6>Unlock your full potential with the best ERP system designed to streamline your operations and drive growth.</h6>
+            <h6>Digitize your deal, discover your dreams.</h6>
             <div class="d-flex justify-content-center justify-content-lg-start">
               <a href="#about" class="btn-get-started scrollto">About Allifmaal ERP</a>
              
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img">
-            <img src="{% static 'allifmaalcommonapp/css/images/hero-img.png' %}" class="img-fluid animated" alt="Allifmaal">
+            <img src="{% static 'allifapperp/css/images/hero-img.png' %}" class="img-fluid animated" alt="Allifmaal">
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@
 
            
          
-            <img src="{% static 'allifmaalcommonapp/css/images/saas.webp' %}" class="img-fluid animated" alt="Allifmaal">
+            <img src="{% static 'allifapperp/css/images/saas.webp' %}" class="img-fluid animated" alt="Allifmaal">
           
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0">
@@ -95,7 +95,7 @@
              
               <a href="#" class="btn-learn-more">Learn More</a>
               <div>
-                <img src="{% static 'allifmaalcommonapp/css/images/whyallifmaal.png' %}" class="img-fluid animated" alt="Allifmaal">
+                <img src="{% static 'allifapperp/css/images/alliferp.webp' %}" class="img-fluid animated" alt="Allifmaal">
               </div>
             </div>
             
@@ -278,7 +278,7 @@
   
           <div class="row">
             <div class="col-lg-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
-              <img src="{% static 'allifmaalcommonapp/css/images/skills.png' %}" class="img-fluid" alt="">
+              <img src="{% static 'allifapperp/css/images/skills.png' %}" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
               <h5>Allifmaal - A Suite of Business Management Applications</h5>
@@ -309,7 +309,7 @@
           <div class="row">
             <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon-box">
-                <div class="icon" ><i class="bx bxl-dribbble"></i></div>
+                <div class="icon" ><i class="bx bx-layer"></i></div>
                 <h4><a href="">CRM</a></h4>
                 <p>The Customer Relation Management module is used to manage customer related activities like customer registrations, customer payments
                   customer statements, customer account activities and much more.
@@ -319,7 +319,7 @@
   
             <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
               <div class="icon-box">
-                <div class="icon"><i class="bx bx-file"></i></div>
+                <div class="icon"><i class="bx bx-layer"></i></div>
                 <h4><a href="">HRM</a></h4>
                 <p>The Human Resource Management module is used to manage staff related activities like employees registrations, staff payments and benefits, salaries,
                   employee statements, employee account activities and much more.</p>
@@ -328,7 +328,7 @@
   
             <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon-box">
-                <div class="icon"><i class="bx bx-tachometer"></i></div>
+                <div class="icon"><i class="bx bx-layer"></i></div>
                 <h4><a href="">FRM</a></h4>
                 <p>The Financial Resources Management module is used to manage finance related activities like accounts, payments, debts, credits, financial statments and much more.</p>
               </div>
@@ -360,27 +360,27 @@
   
           <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-              <div class="portfolio-img"><img src="{% static 'allifmaalcommonapp/css/images/settings.png' %}" class="img-fluid" alt=""></div>
+              <div class="portfolio-img"><img src="{% static 'allifapperp/css/images/settings.png' %}" class="img-fluid" alt=""></div>
             </div>
   
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-              <div class="portfolio-img"><img src="{% static 'allifmaalcommonapp/css/images/distribution-dashboard.png' %}" class="img-fluid" alt=""></div>
+              <div class="portfolio-img"><img src="{% static 'allifapperp/css/images/distribution-dashboard.png' %}" class="img-fluid" alt=""></div>
             </div>
   
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-              <div class="portfolio-img"><img src="{% static 'allifmaalcommonapp/css/images/customer-details.png' %}" class="img-fluid" alt=""></div>
+              <div class="portfolio-img"><img src="{% static 'allifapperp/css/images/customer-details.png' %}" class="img-fluid" alt=""></div>
             </div>
   
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-              <div class="portfolio-img"><img src="{% static 'allifmaalcommonapp/css/images/full-table.png' %}" class="img-fluid" alt=""></div>
+              <div class="portfolio-img"><img src="{% static 'allifapperp/css/images/full-table.png' %}" class="img-fluid" alt=""></div>
             </div>
   
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-              <div class="portfolio-img"><img src="{% static 'allifmaalcommonapp/css/images/nus-table.png' %}" class="img-fluid" alt=""></div>
+              <div class="portfolio-img"><img src="{% static 'allifapperp/css/images/nus-table.png' %}" class="img-fluid" alt=""></div>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-              <div class="portfolio-img"><img src="{% static 'allifmaalcommonapp/css/images/stock-dash.png' %}" class="img-fluid" alt=""></div>
+              <div class="portfolio-img"><img src="{% static 'allifapperp/css/images/stock-dash.png' %}" class="img-fluid" alt=""></div>
             </div>
           </div>
   
@@ -473,7 +473,7 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>Sadi Road, South B, Niarobi</p>
+                  <p>Ecobank House, Niarobi</p>
                 </div>
   
                 <div class="email">
@@ -602,12 +602,7 @@
     <div id="preloader"></div>
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i>Top</a>
   
-    
-
-    <script src="{% static 'allifmaalcommonapp/js/allifweb.js' %}"></script>
-
-
-  
+    <script src="{% static 'allifapperp/js/website/website.js' %}"></script>
   </body>
   
   </html>
