--- a/allifmaalcommonapp/templates/allifmaalcommonapp/departments/departments.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/departments/departments.html
@@ -65,8 +65,9 @@
 <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
-    <div class="allif-scroll-table"> 
-    <table class="table table-layout">
+    <div class="allif-scroll-table table-responsive">
+      <div class="container">
+    <table class="table table-layout allifmaal-full-table">
     <thead>
       <tr class="allif-table-header-row" >
       
@@ -139,6 +140,7 @@
      
       </tbody>
         </table>
+        </div>
     
       </div>
       
