--- a/allifmaalcommonapp/templates/allifmaalcommonapp/table.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/table.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 {% load humanize %}
 <link rel="shortcut icon" href='{% static "allifmaalcommonapp/css/images/allifmaal-icon.png" %}' type="png/ico">
@@ -13,9 +14,8 @@
 <!--the lib below is very important for the top nav bar opening and closing icon... so keep it there.-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link href="{% static 'allifmaalcommonapp/css/sidetopnavbars.css' %}" rel="stylesheet">
-<link href="{% static 'allifmaalcommonapp/css/allifmaalbodyuistyle.css' %}" rel="stylesheet">
-<!--any styles loaded from the static files are to be included here...-->
+<link href="{% static 'allifapperp/css/navbars/sidetopnavbars.css' %}" rel="stylesheet">
+<link href="{% static 'allifapperp/css/body/mainbodyui.css' %}" rel="stylesheet">
 
 {% block style %}
 
@@ -33,132 +33,307 @@
 
 
 <style>
-    .wrapper {
+  .wrapper {
   overflow-x:scroll;
-  width:100%; 
+ 
 }
 table {
-  table-layout: fixed; 
+  table-layout: fixed; /*important*/
   width: 100%;
-  border-collapse: collapse;
-  background: white;
+ 
+  
 }
-tr {
-  border-top: 1px solid #ccc;
-}
+
 td, th {
-  vertical-align: top;
-  text-align: left;
-  width:150px;
-  padding: 5px;
+  
+  
+  /*width:120px;*/
+  
+  width:7em;
+  min-width:2em;
+  max-width: 10em;
+
+  
+  
 }
-.fix {
+.allif-fix-table-col {
   position:sticky;
-  background: white;
+  background: rgb(243, 184, 184);
 }
-.fix:first-child {
+.allif-fix-table-col:first-child {
   left:0;
-  width:180px;
+  width:7em;
+  min-width:2em;
+  max-width: 10em;
+  background: rgb(243, 184, 184);
 }
-.fix:last-child {
+.allif-fix-table-col:last-child {
   right:0;
-  width:120px;
+  width:7em;
+  min-width:2em;
+  max-width: 10em;
+  background: rgb(243, 184, 184);
 }
 </style>
 
-
-
-
-  <div class="wrapper">
-    <table>
-      <thead>
-        <th class='fix'>Fixed</th>
-        <th>Col 1</th>
-        <th>Col 2</th>
-        <th>Col 3</th>
-        <th>Col 4</th>
-        <th>Col 5</th>
-        <th>Col 1</th>
-        <th>Col 2</th>
-        <th>Col 3</th>
-        <th>Col 4</th>
-        <th>Col 5</th>
+<br>
+<hr>
+    
+<div class="allif-scroll-table wrapper"> 
+  <table class="table table-layout">
+  <thead>
+    <tr class="allif-table-header-row" >
+      <th class='allif-fix-table-col'>Col 1</th>
+      <th>Col 2</th>
+      <th>Col 3</th>
+      <th>Col 4</th>
+      <th>Col 5</th>
+      <th>Col 1</th>
+      <th>Col 2</th>
+      <th>Col 3</th>
+      <th>Col 4</th>
+      <th>Col 5</th>
+      <th>Col 1</th>
+      <th>Col 2</th>
+      <th>Col 3</th>
+      <th>Col 4</th>
+      <th>Col 5</th>
+      <th>Col 1</th>
+      <th>Col 2</th>
+      <th>Col 3</th>
+      <th>Col 4</th>
+      <th class='allif-fix-table-col'>Col 5</th>
+    </tr>
+    </thead>
+    <tbody class="allif-table-body">
+     
+    
+      <tr>
+        <td class='allif-fix-table-col'>Firt</td>
+        <td>A1</td>
+        <td>A2 </td>
+        <td>A3</td>
+        <td>A4</td>
+        <td>A5</td>
+        <td>A1</td>
+        <td>A2 </td>
+        <td>A3</td>
+        <td>A4</td>
+        <td>A4</td>
+        <td>A1</td>
+        <td>A2 </td>
+        <td>A3</td>
+        <td>A4</td>
+        <td>A5</td>
+        <td>A1</td>
+        <td>A2 </td>
+        <td>A3</td>
+        <td class='allif-fix-table-col'>A4</td>
+      
+      
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>B1</td>
+        <td>B2</td>
+        <td>B3</td>
+        <td>B4</td>
+        <td>B5</td>
+        <td>B1</td>
+        <td>B2</td>
+        <td>B3</td>
+        <td>B4</td>
        
-      </thead>
-      <tbody>
-        <tr>
-          <td class='fix'>First Content</td>
-          <td>A1</td>
-          <td>A2 (with longer content)</td>
-          <td>A3</td>
-          <td>A4</td>
-          <td>A5</td>
-          <td>A1</td>
-          <td>A2 (with longer content)</td>
-          <td>A3</td>
-          <td>A4</td>
-          <td>A5</td>
-        
-        </tr>
-        <tr>
-          <td class='fix'>First Content (with longer content)</td>
-          <td>B1</td>
-          <td>B2</td>
-          <td>B3</td>
-          <td>B4</td>
-          <td>B5</td>
-          <td>B1</td>
-          <td>B2</td>
-          <td>B3</td>
-          <td>B4</td>
-          <td>B5</td>
-         
-        </tr>
-        <tr>
-          <td class='fix'>First Content</td>
-          <td>C1</td>
-          <td>C2</td>
-          <td>C3</td>
-          <td>C4</td>
-          <td>C5</td>
-          <td>C1</td>
-          <td>C2</td>
-          <td>C3</td>
-          <td>C4</td>
-          <td>C5</td>
-         
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-<!--these files below are html files that mainly hold css content... this is to avoid using/loading static content...-->
-
-<!--the styling below allifmaaluistyling.css contains the main styling of the page body excluding the side and top nav bars-->
-<!--include 'allifmaaluiapp/base/cssinhtml/allifmaalbodyuistyle.html'-->  
-
-<!--the styling below allifmaalmainbootstrap.html is very important... so keep it there.-->
-<!--include 'allifmaaluiapp/base/cssinhtml/allifmaalmainbootstrap.html' 
--->
-
-<!--if there is no internet, the app will use the lib in the specified path in the static folder... otherwise it will use the cdn-->
-<!--this libs important for the opening of side menus-->
-<script src="{% static 'allifmaaluiapp/js/jquery3.6.0.min.js' %}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-<!--below is for the dropdown of the select2 lib-->
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-
-
-
-{% include 'allifmaalcommonapp/base/commonjs/commonjs.js' %}
-
-<script src="{% static 'allifmaalcommonapp/js/allifmaaluimainjs.js' %}"></script>
+       
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+        <td>C5</td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+      
+       
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+        <td>C5</td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+      
+       
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+        <td>C5</td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+      
+       
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+        <td>C5</td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+      
+       
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+        <td>C5</td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+      
+       
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+        <td>C5</td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+      
+       
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+        <td>C5</td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+      
+       
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+        <td>C5</td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+      
+       
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+        <td>C5</td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+      
+       
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+        <td>C5</td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+      
+       
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+        <td>C5</td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+      
+       
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+        <td>C5</td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+      
+       
+      </tr>
+      <tr>
+        <td class='allif-fix-table-col'>First </td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+        <td>C5</td>
+        <td>C1</td>
+        <td>C2</td>
+        <td>C3</td>
+        <td>C4</td>
+      
+       
+      </tr>
+   
+    </tbody>
+      </table>
+  
+    </div>
+    <hr>
 
 </body>
 </html>
