--- a/allifmaalsalesapp/templates/allifmaalsalesapp/home/home.html
+++ b/allifmaalsalesapp/templates/allifmaalsalesapp/home/home.html
@@ -8,8 +8,490 @@
    
 {% block body %}
 
+
 <!--we can insert the other section here-->
 <div class="allifmaincontainer">
+   <!--start of first row-->
+   <div class="row mt-12" >
+      <div class="col-md-4">
+      <div class="card">
+      <div class="card-header allif-dashboard-card-header">
+          Main Company Assets {{assets_tot_val|floatformat:2|intcomma}}
+      </div>
+  
+      <div class="col-md-12">
+      <div class="column allif-dashboard-card-body">
+      <canvas id="myallifchart" width="400" height="300"></canvas>
+<script>
+var ctx33 = document.getElementById('myallifchart').getContext('2d');
+var myallifchart = new Chart(ctx33, {
+    type: 'doughnut',
+    data: {
+        labels: [{% for items in main_assets %} '{{ items.description|truncatewords:2 }}'{% if not forloop.last %}, {% endif %}{% endfor %}],
+        datasets: [{
+            label: 'Current Prospects',
+            data: [{% for items in main_assets %} {{ items.value }}{% if not forloop.last %}, {% endif %}{% endfor %}],
+            backgroundColor: [
+                'rgb(2, 7, 174)',
+                'rgb(35, 150, 92)',
+                'rgb(2, 7, 0)',
+                'rgba(54, 162, 235, 1)',
+                'rgb(118, 40, 28,1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgb(254, 0, 181,1)',
+                'rgb(121, 214, 1)',
+                'rgb(97, 7, 0)',
+                'rgb(255, 153, 1)',
+                'rgb(2, 98, 115)',
+                'rgb(94, 89, 92)',
+                'rgb(116, 46, 88)',
+                'rgb(73, 42, 141)'
+            ],
+            borderColor: [
+                'rgb(2, 7, 174)',
+                'rgb(35, 150, 92)',
+                'rgb(2, 7, 0)',
+                'rgba(54, 162, 235, 1)',
+                'rgb(118, 40, 28,1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgb(254, 0, 181,1)',
+                'rgb(121, 214, 1)',
+                'rgb(97, 7, 0)',
+                'rgb(255, 153, 1)',
+                'rgb(2, 98, 115)',
+                'rgb(94, 89, 92)',
+                'rgb(116, 46, 88)',
+                'rgb(73, 42, 141)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        // No scales for doughnut chart
+    }
+});
+      
+  </script>
+  </div>
+  </div>
+  
+  
+  </div>
+  </div>
+  
+  
+  <div class="col-md-4">
+  <div class="card">
+  <div class="card-header allif-dashboard-card-header">
+  Current Prospects Total Value :{{total_value_of_prospects|floatformat:2|intcomma}}
+  </div>
+  
+  
+  
+  <div class="col-md-12">
+      <div class="column allif-dashboard-card-body">
+  
+      <canvas id="myChart3" width="400" height="300"></canvas>
+      <script>
+      var ctx3 = document.getElementById('myChart3').getContext('2d');
+      var myChart3 = new Chart(ctx3, {
+      type: 'bar',
+  
+      data: {
+      labels: [{% for items in prospects %} '{{items.customer.name|truncatewords:2}}', {% endfor %}],
+  
+      datasets: [{
+  
+      label: 'Current Prospects',
+      data: [{% for items in prospects %} {{items.total}}, {% endfor %}],
+      backgroundColor: [
+      'rgb(2, 7, 174)',
+      'rgb(35, 150, 92)',
+      'rgb(2, 7, 0)',
+      'rgba(54, 162, 235, 1)',
+      'rgb(118, 40, 28,1)',
+      'rgba(75, 192, 192, 1)',
+      'rgba(153, 102, 255, 1)',
+      'rgb(254, 0, 181,1)',
+      'rgb(121, 214, 1)',
+      'rgb(97, 7, 0)',
+      'rgb(255, 153, 1)',
+      'rgb(2, 98, 115)',
+      'rgb(94, 89, 92)',
+      'rgb(116, 46, 88)',
+      'rgb(73, 42, 141)',
+          
+      ],
+      borderColor: [
+      'rgb(2, 7, 174)',
+      'rgb(35, 150, 92)',
+      'rgb(2, 7, 0)',
+      'rgba(54, 162, 235, 1)',
+      'rgb(118, 40, 28,1)',
+      'rgba(75, 192, 192, 1)',
+      'rgba(153, 102, 255, 1)',
+      'rgb(254, 0, 181,1)',
+      'rgb(121, 214, 1)',
+      'rgb(97, 7, 0)',
+      'rgb(255, 153, 1)',
+      'rgb(2, 98, 115)',
+      'rgb(94, 89, 92)',
+      'rgb(116, 46, 88)',
+      'rgb(73, 42, 141)',
+      ],
+      borderWidth: 1
+      }]
+      },
+      options: {
+      scales: {
+      yAxes: [{
+          ticks: {
+              beginAtZero: true
+          }
+      }]
+      }
+      }
+      });
+  </script>
+  </div>
+  </div>
+  
+  
+  </div></div>
+  
+  
+  <div class="col-md-4">
+  <div class="card">
+  <div class="card-header allif-dashboard-card-header">
+  Current Prospects Total Value :{{total_value_of_prospects|floatformat:2|intcomma}}
+  </div>
+  
+  <div class="col-md-12">
+  <div class="column allif-dashboard-card-body">
+  
+      <canvas id="myChart3" width="400" height="300"></canvas>
+      <script>
+      var ctx3 = document.getElementById('myChart3').getContext('2d');
+      var myChart3 = new Chart(ctx3, {
+      type: 'bar',
+  
+      data: {
+      labels: [{% for items in prospects %} '{{items.customer.name|truncatewords:2}}', {% endfor %}],
+  
+          datasets: [{
+  
+      label: 'Current Prospects',
+      data: [{% for items in prospects %} {{items.total}}, {% endfor %}],
+      backgroundColor: [
+      'rgb(2, 7, 174)',
+      'rgb(35, 150, 92)',
+      'rgb(2, 7, 0)',
+      'rgba(54, 162, 235, 1)',
+      'rgb(118, 40, 28,1)',
+      'rgba(75, 192, 192, 1)',
+      'rgba(153, 102, 255, 1)',
+      'rgb(254, 0, 181,1)',
+      'rgb(121, 214, 1)',
+      'rgb(97, 7, 0)',
+      'rgb(255, 153, 1)',
+      'rgb(2, 98, 115)',
+      'rgb(94, 89, 92)',
+      'rgb(116, 46, 88)',
+      'rgb(73, 42, 141)',
+          
+      ],
+      borderColor: [
+      'rgb(2, 7, 174)',
+      'rgb(35, 150, 92)',
+      'rgb(2, 7, 0)',
+      'rgba(54, 162, 235, 1)',
+      'rgb(118, 40, 28,1)',
+      'rgba(75, 192, 192, 1)',
+      'rgba(153, 102, 255, 1)',
+      'rgb(254, 0, 181,1)',
+      'rgb(121, 214, 1)',
+      'rgb(97, 7, 0)',
+      'rgb(255, 153, 1)',
+      'rgb(2, 98, 115)',
+      'rgb(94, 89, 92)',
+      'rgb(116, 46, 88)',
+      'rgb(73, 42, 141)',
+      ],
+      borderWidth: 1
+      }]
+      },
+      options: {
+      scales: {
+      yAxes: [{
+          ticks: {
+              beginAtZero: true
+          }
+      }]
+      }
+      }
+      });
+  </script>
+  </div>
+  </div>
+  
+  
+  </div></div>
+  </div>
+  
+  <!--end of first row-->
+  
+  <!--start of second row-->
+  
+   <!--start of first row-->
+   <div class="row mt-12" >
+      <div class="col-md-4">
+      <div class="card">
+      <div class="card-header allif-dashboard-card-header">
+          Main Company Assets {{assets_tot_val|floatformat:2|intcomma}}
+      </div>
+  
+      <div class="col-md-12">
+      <div class="column allif-dashboard-card-body">
+                      
+      <canvas id="myallifchart" width="400" height="300"></canvas>
+      <script>
+      var ctx33 = document.getElementById('myallifchart').getContext('2d');
+      var myallifchart = new Chart(ctx33, {
+      type: 'doughnut',
+  
+      data: {
+      labels: [{% for items in main_assets %} '{{items.description|truncatewords:2}}', {% endfor %}],
+  
+      datasets: [{
+  
+      label: 'Current Prospects',
+      data: [{% for items in main_assets %} {{items.value}}, {% endfor %}],
+      backgroundColor: [
+      'rgb(2, 7, 174)',
+      'rgb(35, 150, 92)',
+      'rgb(2, 7, 0)',
+      'rgba(54, 162, 235, 1)',
+      'rgb(118, 40, 28,1)',
+      'rgba(75, 192, 192, 1)',
+      'rgba(153, 102, 255, 1)',
+      'rgb(254, 0, 181,1)',
+      'rgb(121, 214, 1)',
+      'rgb(97, 7, 0)',
+      'rgb(255, 153, 1)',
+      'rgb(2, 98, 115)',
+      'rgb(94, 89, 92)',
+      'rgb(116, 46, 88)',
+      'rgb(73, 42, 141)',
+          
+      ],
+      borderColor: [
+      'rgb(2, 7, 174)',
+      'rgb(35, 150, 92)',
+      'rgb(2, 7, 0)',
+      'rgba(54, 162, 235, 1)',
+      'rgb(118, 40, 28,1)',
+      'rgba(75, 192, 192, 1)',
+      'rgba(153, 102, 255, 1)',
+      'rgb(254, 0, 181,1)',
+      'rgb(121, 214, 1)',
+      'rgb(97, 7, 0)',
+      'rgb(255, 153, 1)',
+      'rgb(2, 98, 115)',
+      'rgb(94, 89, 92)',
+      'rgb(116, 46, 88)',
+      'rgb(73, 42, 141)',
+      ],
+      borderWidth: 1
+      }]
+      },
+      options: {
+          scales: {
+              yAxes: [{
+                  ticks: {
+                      beginAtZero: true
+                  }
+              }]
+          }
+      }
+      });
+  </script>
+  </div>
+  </div>
+  
+  
+  </div>
+  </div>
+  
+  
+  <div class="col-md-4">
+  <div class="card">
+  <div class="card-header allif-dashboard-card-header">
+  Current Prospects Total Value :{{total_value_of_prospects|floatformat:2|intcomma}}
+  </div>
+  
+  
+  
+  <div class="col-md-12">
+      <div class="column allif-dashboard-card-body">
+  
+      <canvas id="myChart3" width="400" height="300"></canvas>
+      <script>
+      var ctx3 = document.getElementById('myChart3').getContext('2d');
+      var myChart3 = new Chart(ctx3, {
+      type: 'bar',
+  
+      data: {
+      labels: [{% for items in prospects %} '{{items.customer.name|truncatewords:2}}', {% endfor %}],
+  
+      datasets: [{
+  
+      label: 'Current Prospects',
+      data: [{% for items in prospects %} {{items.total}}, {% endfor %}],
+      backgroundColor: [
+      'rgb(2, 7, 174)',
+      'rgb(35, 150, 92)',
+      'rgb(2, 7, 0)',
+      'rgba(54, 162, 235, 1)',
+      'rgb(118, 40, 28,1)',
+      'rgba(75, 192, 192, 1)',
+      'rgba(153, 102, 255, 1)',
+      'rgb(254, 0, 181,1)',
+      'rgb(121, 214, 1)',
+      'rgb(97, 7, 0)',
+      'rgb(255, 153, 1)',
+      'rgb(2, 98, 115)',
+      'rgb(94, 89, 92)',
+      'rgb(116, 46, 88)',
+      'rgb(73, 42, 141)',
+          
+      ],
+      borderColor: [
+      'rgb(2, 7, 174)',
+      'rgb(35, 150, 92)',
+      'rgb(2, 7, 0)',
+      'rgba(54, 162, 235, 1)',
+      'rgb(118, 40, 28,1)',
+      'rgba(75, 192, 192, 1)',
+      'rgba(153, 102, 255, 1)',
+      'rgb(254, 0, 181,1)',
+      'rgb(121, 214, 1)',
+      'rgb(97, 7, 0)',
+      'rgb(255, 153, 1)',
+      'rgb(2, 98, 115)',
+      'rgb(94, 89, 92)',
+      'rgb(116, 46, 88)',
+      'rgb(73, 42, 141)',
+      ],
+      borderWidth: 1
+      }]
+      },
+      options: {
+      scales: {
+      yAxes: [{
+          ticks: {
+              beginAtZero: true
+          }
+      }]
+      }
+      }
+      });
+  </script>
+  </div>
+  </div>
+  
+  
+  </div></div>
+  
+  
+  <div class="col-md-4">
+  <div class="card">
+  <div class="card-header allif-dashboard-card-header">
+  Current Prospects Total Value :{{total_value_of_prospects|floatformat:2|intcomma}}
+  </div>
+  
+  <div class="col-md-12">
+  <div class="column allif-dashboard-card-body">
+  
+      <canvas id="myChart3" width="400" height="300"></canvas>
+      <script>
+      var ctx3 = document.getElementById('myChart3').getContext('2d');
+      var myChart3 = new Chart(ctx3, {
+      type: 'bar',
+  
+      data: {
+      labels: [{% for items in prospects %} '{{items.customer.name|truncatewords:2}}', {% endfor %}],
+  
+          datasets: [{
+  
+      label: 'Current Prospects',
+      data: [{% for items in prospects %} {{items.total}}, {% endfor %}],
+      backgroundColor: [
+      'rgb(2, 7, 174)',
+      'rgb(35, 150, 92)',
+      'rgb(2, 7, 0)',
+      'rgba(54, 162, 235, 1)',
+      'rgb(118, 40, 28,1)',
+      'rgba(75, 192, 192, 1)',
+      'rgba(153, 102, 255, 1)',
+      'rgb(254, 0, 181,1)',
+      'rgb(121, 214, 1)',
+      'rgb(97, 7, 0)',
+      'rgb(255, 153, 1)',
+      'rgb(2, 98, 115)',
+      'rgb(94, 89, 92)',
+      'rgb(116, 46, 88)',
+      'rgb(73, 42, 141)',
+          
+      ],
+      borderColor: [
+      'rgb(2, 7, 174)',
+      'rgb(35, 150, 92)',
+      'rgb(2, 7, 0)',
+      'rgba(54, 162, 235, 1)',
+      'rgb(118, 40, 28,1)',
+      'rgba(75, 192, 192, 1)',
+      'rgba(153, 102, 255, 1)',
+      'rgb(254, 0, 181,1)',
+      'rgb(121, 214, 1)',
+      'rgb(97, 7, 0)',
+      'rgb(255, 153, 1)',
+      'rgb(2, 98, 115)',
+      'rgb(94, 89, 92)',
+      'rgb(116, 46, 88)',
+      'rgb(73, 42, 141)',
+      ],
+      borderWidth: 1
+      }]
+      },
+      options: {
+      scales: {
+      yAxes: [{
+          ticks: {
+              beginAtZero: true
+          }
+      }]
+      }
+      }
+      });
+  </script>
+  </div>
+  </div>
+  
+  
+  </div></div>
+  </div>
+  
+  <!--end of first row-->
+  
+  <!--start of second row-->
+  
+ 
+
+  
+
+
  <div class="row mt-12"> <!--start....table row-->
  <div class="col-md-12"> <!--start....table column-->
  <div class="allif-scroll-table"> 
@@ -245,6 +727,13 @@ Example: "Check out our new reporting module!"
 Would you like more detailed examples or help with designing any specific section?
 
 </div><!--end of main container of the page-->
+
+
+ 
+<!--we can insert the other section here...-->
+
+
+   
 
    {% endblock %}
    
