--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
@@ -124,7 +124,7 @@
       
        <!--start of column two-->
        <div class="col-md-4">
-        <div class="allif-details-card ">
+        <div class="allif-details-card tablere table-responsive">
           <!--start of the table here-->
         <table class="table table-layout allif-details-table">
           <tbody>
@@ -176,9 +176,9 @@
       
        <!--start of column two-->
        <div class="col-md-4">
-        <div class="allif-details-card ">
+        <div class="allif-details-card table-responsive">
           <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
+        <table class="table table-layout ">
           <tbody>
     
     <tr>
