--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
@@ -66,7 +66,7 @@
           </thead>
           <tbody class="allif-table-body">
               
-          {% for item in allifquerysetd %}
+          {% for item in allifqueryset %}
           <tr>
             <td class="allif-fix-table-col">
               <a href="{% url 'allifmaalcommonapp:commonDivisionDetails' item.id user_var glblslug %}" class="allif-table-links">
