--- a/static/allifapperp/css/body/mainbodyui.css
+++ b/static/allifapperp/css/body/mainbodyui.css
@@ -258,7 +258,6 @@ background-color: var(--main-background-color);
   box-shadow: var(--box-shadow-specs);
   margin-top: 0.1em;
  
-  
 }
 
 .table-details-content-description{
@@ -276,11 +275,9 @@ background-color: var(--main-background-color);
 /*error description*/
 .content-description-error{
   text-align: center;
-  
   font-family: var(--main-font-type);
   color: var(--main-red-color);
   box-shadow: var(--box-shadow-specs);
-  
   font-size:var(--main-text-font-size);
   background-color: rgb(245, 247, 246);
   
@@ -307,6 +304,7 @@ background-color: var(--main-background-color);
   margin-bottom: 1em;
   box-shadow: 0em 0em 0.5em #858585;
   
+  
 }
   /* make the table heads sticky and fixed ...*/
 .allif-scroll-table thead tr {
@@ -329,6 +327,7 @@ white-space: nowrap; /* Prevent text from wrapping */
 .allif-full-table{
   height: auto;
   max-height: 80vh;
+  overflow: auto;
   overflow-y: auto;
   
 }
@@ -354,10 +353,8 @@ min-width:auto;
 .allif-table-header-row {
   box-shadow: 0em 0em 0.5em #858585;
   border: none; 
-  z-index: 10;
+  z-index: 1;
  
-  
-  
   }
  
   
@@ -366,9 +363,17 @@ min-width:auto;
   border: none;
   }
       
-.allifmaincontainer tr:hover {
+.allifmaincontainer tr:hover{
   background-color: #FFF;
   box-shadow: 0em 0em 0.1em var(--main-green-color);
+  
+  }
+
+td.allif-fix-table-col:hover {
+  background-color: #FFF;
+  box-shadow: 0em 0em 0.1em var(--main-green-color);
+  border-top: 1.4px  var(--main-green-color) solid;
+  
   }
 
 .table-layout tbody.allif-table-body {
@@ -398,15 +403,7 @@ a.allif-table-links:hover {
   color: var(--links-on-hover-text-color);
 }
 
-.table-layout tr tbody td {
-  background-color: red;
-}
-.table-layout .allif-table-body tr td tbody{
-  background-color: red;
-}
-td.table-layout{
-  background-color: red;
-}
+
 /*styling for the form page*/
 .allifmaincontainer .allif-form-container {
   background-color:var(--main-background-color);
