--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
@@ -753,7 +753,57 @@
             <td>{{item.email}}
               jfjlwjerewj jwerjewlkrjlkewjrkj lkjreklewklrjwelkj lkwejrlkewjrlkwejrklej lkjerlkjrwero
             </td>
+
           </tr>
+          <tr>
+            <td class="allif-fix-table-col">
+              <a href="" class="allif-table-links">
+             {{item.divisio}}last1
+              </a>
+            </td>
+           
+            <td>
+              {{item.company.sector}}lst2
+            </td>
+            <td>{{item.owner}} last3
+
+            </td>
+            
+            <td>{{item.email}}flast4
+
+            </td>
+         
+            <td>
+              {{item.company.sector}}last5
+            </td>
+            <td>{{item.owner}}
+              last6
+            </td>
+            
+            <td>{{item.email}}
+              last7
+            </td>
+            <td>
+              {{item.company.sector}} last8
+            </td>
+            <td>{{item.owner}}
+              last9
+            </td>
+            
+            <td>{{item.email}}
+             last 10
+            </td>
+         
+            <td>
+              {{item.company.sector}}last 11
+            </td>
+            <td>{{item.owner}}
+              last 12
+            </td>
+            
+            <td>{{item.email}}
+              last13
+            </td>
         </tbody>
       </table>
       </div>
