--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
@@ -6,7 +6,9 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+<div class="container-fluid">
 <div class="allifmaincontainer">
+  
 <!--start....main headere-->
 <div class="card-header">
 
@@ -322,6 +324,8 @@
 </div><!--end....table column-->
 
 </div><!--end....table row-->
+
+</div>
 
 </div>
   {% block scripts %}
