--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
@@ -1596,9 +1596,153 @@
 </div><!--end....table row-->
 
 
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="table-responsive allif-full-table">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="allif-details-card table-responsive">
+      <table class="table table-layout">
+      <tbody>
+      <tr>
+        <td>Company</td>
+        <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+    
+        </tr>
+      <tr>
+      <td>Email </td>
+      <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+  
+      </tr>
+      
+        <tr>
+          <td>Phone 1</td>
+          <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+      
+          </tr>
+      <tr>
+        <td>Phone 2</td>
+        <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+    
+        </tr>
+    <tr>
+      <td>City</td>
+      <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+  
+      </tr>
+      <tr>
+        <td>Country</td>
+        <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+    
+        </tr>
+ 
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+        <tr>
+          <td>Company</td>
+          <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+      
+          </tr>
+        <tr>
+        <td>Email</td>
+        <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+    
+        </tr>
+        
+          <tr>
+            <td>Phone 1</td>
+            <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+        
+            </tr>
+        <tr>
+          <td>Phone 2</td>
+          <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+      
+          </tr>
+      <tr>
+        <td>City</td>
+        <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+    
+        </tr>
+        <tr>
+          <td>Country</td>
+          <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+      
+          </tr>
+   
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+        <tr>
+          <td>Company</td>
+          <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+      
+          </tr>
+        <tr>
+        <td>Email</td>
+        <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+    
+        </tr>
+        
+          <tr>
+            <td>Phone 1</td>
+            <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+        
+            </tr>
+        <tr>
+          <td>Phone 2</td>
+          <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+      
+          </tr>
+      <tr>
+        <td>City</td>
+        <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+    
+        </tr>
+        <tr>
+          <td>Country</td>
+          <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+      
+          </tr>
+   
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
+
+</div><!--end....table row-->
+</div>
 <!--end of table-->
 
 </div><!--end of main container of the page....-->
+</div>
 
   
   {% block scripts %}
